# stepit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: stepit_utils.cmake
config/: demo.conf.sh  environment.sh
config/robot/: g1.yml  x30u.yml
config/run/: aliengo.conf.sh  b2.conf.sh  demo.conf.sh  g1.conf.sh  g1_bfs.conf.sh  go2.conf.sh  joystick.conf.sh  ros.conf.sh  ros1.conf.sh  ros2.conf.sh  sim.conf.sh  unitree2.conf.sh
doc/: control.md  plugin.md
include/stepit/: agent.h  communication.h  control_input.h  logging.h  plugin.h  policy.h  registry.h  robot.h  spin.h  utils.h
package/ros/stepit_ros/: CMakeLists.txt
plugin/control_console/: README.md
plugin/csv_publisher/src/: csv_publisher.cpp
plugin/debugging_helper/src/: dummy_robot.cpp  entry.cpp
plugin/field_base/src/: data_loader.cpp  field.cpp  operator.cpp
plugin/joystick_base/: CMakeLists.txt  README.md
plugin/joystick_base/app/: joystick_test.cpp
plugin/joystick_base/src/: joystick.cpp  keymap.cpp
plugin/joystick_redis/: CMakeLists.txt
plugin/joystick_udp/src/: joystick_udp.cpp
plugin/joystick_usb/src/: usb.cpp
plugin/nnrt_ascendcl/src/: ascendcl.cpp
plugin/nnrt_base/: README.md
plugin/nnrt_base/app/: nnrt_test.cpp
plugin/nnrt_base/src/: nnrt.cpp
plugin/nnrt_base/template/: network.yml
plugin/nnrt_onnxruntime/: CMakeLists.txt  README.md
plugin/nnrt_onnxruntime/app/: onnx_metadata2yaml.cpp
plugin/nnrt_onnxruntime/src/: onnxruntime.cpp
plugin/nnrt_rknnrt/src/: rknnrt.cpp
plugin/nnrt_tensorrt/: CMakeLists.txt  README.md
plugin/nnrt_tensorrt/include/stepit/nnrt/: tensorrt.h
plugin/nnrt_tensorrt/src/: tensorrt.cpp
plugin/nnrt_tensorrt/template/: network.yml
plugin/nnrt_torchjit/: CMakeLists.txt  README.md
plugin/nnrt_torchjit/src/: torchjit.cpp
plugin/policy_neuro/: CMakeLists.txt  README.md
plugin/policy_neuro/src/: action_source.cpp  actuator.cpp  cmd_posture_source.cpp  cmd_vel_source.cpp  const_field_source.cpp  field.cpp  field_assembler.cpp  field_history.cpp  field_ops.cpp  (+11 more)
plugin/policy_neuro_motion_tracking/: CMakeLists.txt  README.md
plugin/policy_neuro_ros/: CMakeLists.txt  README.md  package.xml
plugin/policy_neuro_ros2/: CMakeLists.txt  README.md  package.xml
plugin/publisher_csv/: CMakeLists.txt  README.md
plugin/pyutils/: CMakeLists.txt  README.md
plugin/pyutils/app/: npz_info.cpp
plugin/pyutils/include/stepit/pyutils/: npz_reader.h
plugin/pyutils/src/: entry.cpp  npz_reader.cpp
plugin/redis_base/: CMakeLists.txt  README.md
plugin/robot_unitree/: CMakeLists.txt  README.md
plugin/robot_unitree2/: CMakeLists.txt  README.md
plugin/ros2_base/: CMakeLists.txt  README.md
plugin/ros_base/: CMakeLists.txt  README.md
scripts/: build.sh  clean.sh  run.sh  setup.sh
src/stepit/: agent.cpp  builtin.cpp  communication.cpp  control_input.cpp  logging.cpp  plugin.cpp  publisher.cpp  robot.cpp  spin.cpp  utils.cpp
src/stepit_app/: main.cpp  rotation_transform.cpp
(+112 files in other folders)
